# ISeeNN

./: LICENSE  ReadMe.md
ISeeNN/: manage.py
ISeeNN/ISeeNN/: personal_settings.py.example  settings.py  urls.py  wsgi.py
ISeeNN/annotator/: models.py  urls.py  utils.py  views.py
ISeeNN/annotator/static/annotator/css/: annotate.css  result_arrange.css
ISeeNN/annotator/static/annotator/js/: annotate.js
ISeeNN/annotator/templates/annotator/: annotate.html  completed.html  login.html  select.html  view_select.html  view_select_detail.html
ISeeNN/image_server/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
ISeeNN/search_web/: apps.py  index.html  models.py  urls.py  views.py
ISeeNN/search_web/feature_extractor/: __init__.py  extractor.py  normalizer.py  util.py
ISeeNN/search_web/feature_extractor/models/: __init__.py  base_model.py  vgg16fc6.py  vgg16fc7.py  vgg16p5.py
ISeeNN/search_web/static/search_web/css/: detail.css  result_arrange.css
ISeeNN/search_web/static/search_web/js/: result_arrange.js
ISeeNN/search_web/templates/search_web/: detail.html  index.html  result.html
Indexer/: ava_indexer.py  indexer.py  models.py
search_engine/: CMakeLists.txt  Index.cpp  Index.h  PythonInterface.cpp  Query.cpp  Query.h  build.sh  main.cpp
